force-app/main/default/objects/HAM_Event_Email_Template__c/HAM_Event_Email_Template__c.object-meta.xml
<CustomObject>
    <label>Event Email Template</label>
    <nameField>
        <label>Event Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>