force-app/main/default/objects/HAM_Event_Email_Template__c/fields/CventEvents_Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this email template to its parent Cvent event record.</description>
    <inlineHelpText>The Cvent event this email template belongs to.</inlineHelpText>
    <label>Cvent Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>Event Email Templates</relationshipLabel>
    <relationshipName>Event_Email_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>