force-app/main/default/objects/HAM_Event_Email_Template__c/fields/HAM_BT_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the originating Blackthorn email template record. Provides a navigable back-link for validation and cross-reference.</description>
    <inlineHelpText>Click to navigate to the original Blackthorn email template record. Null indicates this record was not migrated from Blackthorn.</inlineHelpText>
    <label>BT Email Template</label>
    <referenceTo>conference360__Email_Template__c</referenceTo>
    <relationshipLabel>Event Email Templates</relationshipLabel>
    <relationshipName>Event_Email_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>