force-app/main/default/objects/HAM_Event_Email_Template__c/fields/HAM_JSON_Content_1__c.field-meta.xml
<CustomField>
    <fullName>HAM_JSON_Content_1__c</fullName>
    <description>First segment of the email template JSON content carried over from Blackthorn. Split across two fields due to field size limits.</description>
    <inlineHelpText>First part of the raw JSON email content from Blackthorn.</inlineHelpText>
    <label>JSON Content 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>