force-app/main/default/objects/HAM_Event_Email_Template__c/fields/HAM_JSON_Content_2__c.field-meta.xml
<CustomField>
    <fullName>HAM_JSON_Content_2__c</fullName>
    <description>Second segment of the email template JSON content carried over from Blackthorn. Continuation of HAM_JSON_Content_1__c.</description>
    <inlineHelpText>Second part of the raw JSON email content from Blackthorn.</inlineHelpText>
    <label>JSON Content 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>