force-app/main/default/objects/HAM_Event_Email_Template__c/fields/HAM_SF_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>HAM_SF_Template_Id__c</fullName>
    <description>The Salesforce Classic Email Template ID linked to this record in Blackthorn.</description>
    <inlineHelpText>The ID of the linked Salesforce email template.</inlineHelpText>
    <label>SF Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>