force-app/main/default/objects/HAM_Event_Email_Template__c/fields/HAM_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Template_Name__c</fullName>
    <description>The name of this email template carried over from Blackthorn.</description>
    <inlineHelpText>The template name as it appeared in Blackthorn.</inlineHelpText>
    <label>Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>