force-app/main/default/objects/HAM_Event_Email_Template__c/fields/HAM_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Template_Type__c</fullName>
    <description>The type of email template carried over from Blackthorn.</description>
    <inlineHelpText>The category of email this template is used for.</inlineHelpText>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Waitlist Pending</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>